lab-7-facerec-kube-SamFeig/rest/logs-deployment.yaml
##
## You provide this
##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-server
  labels:
    app: logs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
      - name: logs
        image: samfeig/logs-server:latest
        stdin: true
        tty: true
