lab-7-facerec-kube-SamFeig/rest/rest-service.yaml
##
## You provide this
##
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    app: rest
spec:
  selector:
    app: rest
  ports:
  - port: 5000
    targetPort: 5000
