lab-7-facerec-kube-SamFeig/rest/rest-ingress.yaml
##
## You provide this
##
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: rest-service
          servicePort: 5000
